cleanup [editor]: replace implicit int[] with explicit class VisualColumn
GitOrigin-RevId: 798c7ec5c5893c97fbb4256ea0556be02a92a2bf